# hedis

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  cabal.project  cheops-email.cabal  hedis.cabal  shell.nix
.github/workflows/: haskell-ci.yml
cheops-email/: cheops-email.cabal  env.dist
cheops-email/app/: Main.hs
cheops-email/src/Cheops/Email/: Api.hs  Content.hs  Server.hs
cheops-email/src/Cheops/Email/Server/Handler/: Send.hs
cheops-email/src/Cheops/Email/Server/Handler/Send/: Model.hs
deploy/helm/charts/email/: Chart.yaml
deploy/helm/charts/email/charts/cpm/: values.yaml
deploy/helm/charts/email/conf/sirius/: default.yaml  dev.yaml
deploy/helm/charts/email/templates/cheops-email/: deployment.yaml  service.yaml
deploy/heml/charts/email/charts/cpm/: values.yaml
deploy/heml/charts/email/templates/: NOTES.txt
deploy/heml/charts/email/templates/cheops-email/: deployment.yaml  service.yaml
deploy/heml/email/: Chart.yaml  values.yaml
deploy/heml/email/charts/cpm/: Chart.yaml
nix/: default.nix  macos.nix  overlays.nix  release.nix  update  versions.json
nix/pkgs/: aeson-injector.nix  co-log-concurrent.nix  co-log-core.nix  first-class-families.nix  postgres-options.nix  tmp-postgres.nix
nix/pkgs/cheops-email/: cheops-email-exe.nix  default.nix
nix/pkgs/docker/: base.nix  cheops-email.nix
src/Database/Redis/: Commands.hs  ManualCommands.hs
test/: MainRedis7.hs  Tests.hs
