cabal-version:       >=1.10
name:                cheops-email
version:             0.1.0.0
synopsis:            Email delivery service
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Maria Kuklina
maintainer:          rehmaar@sirius.online
copyright:           Фонд "Талант и Успех" (c) 2020
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable cheops-email
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.11 && <4.14
    , cheops-db
    , aeson
    , aeson-pretty
    , bytestring
    , lens
    , text
    , time
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , warp
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
