cabal-version:       >=1.10
name:                cheops-email
version:             0.1.0.0
synopsis:            Email delivery service
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Maria Kuklina
maintainer:          rehmaar@sirius.online
copyright:           Фонд "Талант и Успех" (c) 2020
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dir: src
  exposed-modules:
    Cheops.Email.Api
    Cheops.Email.Server
    Cheops.Email.Content
  build-depends:
    base >=4.11 && <4.14
    , cheops-db
    , cheops-logger
    , aeson
    , aeson-pretty
    , bytestring
    , cheops-lib
    , lens
    , text
    , time
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , warp
    , mime-mail
    , vault
    , HaskellNet
  default-extensions:
    OverloadedStrings
    DataKinds
    LambdaCase
    TypeOperators
    GeneralizedNewtypeDeriving
    DeriveDataTypeable
    DeriveGeneric
    RecordWildCards

executable cheops-email
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.11 && <4.14
    , cheops-email
    , cheops-db
    , cheops-logger
    , cheops-lib
    , aeson
    , aeson-pretty
    , bytestring
    , lens
    , text
    , time
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:
    OverloadedStrings
    DataKinds
    LambdaCase
    TypeOperators
    GeneralizedNewtypeDeriving
    DeriveDataTypeable
    DeriveGeneric
    RecordWildCards
